modified:   index.html 	modified:   script.js 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 <body>
 <div id="app">
 <div style="order:0">
-Attempts: {{ Tries }}
+</div>
+<div id="status_container">
+<status_bar Z="Target Value" v-bind:t="TargetValue" style="background-color:rgba(255, 0, 0, 0.3);"v-bind:style="{margin: TargetValue/10+'%'}">
+</status_bar>
+<status_bar Z="Current Mean" v-bind:t="current_score" style="background-color:rgba(0, 255, 0, 0.3);text-align:end;"v-bind:style="{margin: current_score/10+'%'}">
+</status_bar>
+<status_bar Z="Difference" v-bind:t="Difference" style="background-color:rgba(255, 255, 153, .5);text-align:center;"v-bind:style="{margin: Difference/10+'%'}">
+</status_bar>
+
 </div>
 <div id="guesses">
-<status_bar Z="Target Value" v-bind:t="TargetValue" style="height:1em;width:50%;position:absolute;background-color:rgba(255, 0, 0, 0.3);"v-bind:style="{margin: TargetValue/10+'%'}">
-</status_bar>
-<status_bar Z="Current Mean" v-bind:t="current_score" style="transition:all 1s;height:1em;width:50%;position:absolute;background-color:rgba(0, 255, 0, 0.3);text-align:end;"v-bind:style="{margin: current_score/10+'%'}">
-</status_bar>
-<status_bar Z="Difference" v-bind:t="Difference" style="transition:all 1s;height:1em;width:50%;position:absolute;background-color:rgba(255, 255, 153, .5);text-align:center;"v-bind:style="{margin: Difference/10+'%'}">
-</status_bar>
  <guess v-for="g in guesses" class="guess"  v-bind:style="{opacity:g+'%'}" v-bind:g="g">
  &nbsp;
  </guess>
 </div>
+<status_bar  Z="Attempts" v-bind:t="Tries"
+style="text-align:center;position:relative;"></status_bar>
 <div id="tileContainer">
  <tile v-for="v in values" class="tile" v-bind:n="v"></tile>
 </div>
